--- a/backend/.env
+++ b/backend/.env
@@ -6,4 +6,4 @@ DB_PASS=TuPasswordSegura
 
 EMAIL_SERVICE=gmail
 EMAIL_USER=jeanpaulsuareszpalomino@gmail.com
-EMAIL_PASS=Report.123  # Usa un “App Password” en Gmail
+EMAIL_PASS=Sistemas.123  
